server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-13.snap
---
source: server/src/search_executor/mod.rs
description: A search for the Architects name should return the correct room
expression: actual
info: "'00.01.001' should get '5601.EG.001' in 1 results # A search for the Architects name should return the correct room"
---
- facet: rooms
  entries:
    - id: 5601.EG.001
      type: room
      name: "5601.EG.\u0019001\u0017 (Magistrale)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.01.001@5601
      parsed_id: "MI \u001900.01.001\u0017"
    - id: 9377.EG.001
      type: room
      name: "9377.EG.\u0019001\u0017 (come together)"
      subtext: "taufkirchen-ottobr., Lise-Meitner-Straße 9-11"
      subtext_bold: 00.001@9377
    - id: 2927.EG.001
      type: room
      name: "2927.EG.\u0019001\u0017 (Bibliothek Theke)"
      subtext: "campus-straubing-cs-biotechnologie-und-nachhaltigkeit, PG 18"
      subtext_bold: 00.001@2927
    - id: 3503.EG.001
      type: room
      name: "3503.EG.\u0019001\u0017 (Büro)"
      subtext: "campus-straubing-cs-biotechnologie-und-nachhaltigkeit, PG 05"
      subtext_bold: 00.001@3503
    - id: 3510.EG.001
      type: room
      name: "3510.EG.\u0019001\u0017 (Büro)"
      subtext: "campus-straubing-cs-biotechnologie-und-nachhaltigkeit, Fürstenstraße 11"
      subtext_bold: 00.001@3510
    - id: 5302.EG.001A
      type: room
      name: "5302.EG.\u0019001\u0017A (Büro)"
      subtext: "garching, CBM"
      subtext_bold: 00.001.A@5302
    - id: 9379.EG.001
      type: room
      name: "9379.EG.\u0019001\u0017 (Teeküche)"
      subtext: "taufkirchen-ottobr., Lise-Meitner-Straße 8"
      subtext_bold: 00.001@9379
    - id: 3508.EG.001
      type: room
      name: "3508.EG.\u0019001\u0017 (Ordensraum)"
      subtext: "campus-straubing-cs-biotechnologie-und-nachhaltigkeit, Albrechtgasse 28"
      subtext_bold: 00.001@3508
    - id: 5132.EG.001
      type: room
      name: "5132.EG.\u0019001\u0017 (Ruheraum)"
      subtext: "garching, COS"
      subtext_bold: 00.001@5132
    - id: 3502.EG.011
      type: room
      name: 3502.EG.011 (Flur)
      subtext: "campus-straubing-cs-biotechnologie-und-nachhaltigkeit, SG 22"
      subtext_bold: 00.001@3502
  n_visible: 10
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
