server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-19.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'1801 maschinen' should get '5508.02.801' in 1 results"
---
- facet: rooms
  entries:
    - id: 5508.02.801
      type: room
      name: 5508.02.801 (Hörsaal)
      subtext: "garching, MW"
      subtext_bold: 1801@5508
      parsed_id: "MW \u00191801\u0017"
    - id: 0508.01.801
      type: room
      name: 0508.01.801 (WC/Dusche)
      subtext: "stammgelände, Heizkraftwerk"
      subtext_bold: 1801@0508
      parsed_id: "\u00191801\u0017 Heizkraftwerk"
    - id: 0106.U1.801
      type: room
      name: 0106.U1.801 (Archiv)
      subtext: "stammgelände, N6"
      subtext_bold: N-1801@0106
    - id: 0108.01.801
      type: room
      name: 0108.01.801 (Labor)
      subtext: "stammgelände, N8"
      subtext_bold: N1801@0108
    - id: 2332.01.217
      type: room
      name: "2332.01.217 ((32.\u00191.801\u0017) Büro)"
      subtext: "sz, CiO/SG Institute Ost"
      subtext_bold: 01.2332.217@2332
    - id: 4192.01.801
      type: room
      name: 4192.01.801 (Büro)
      subtext: "staatsgut-veitshof, ehem. Wasserwerk"
      subtext_bold: R1@4192
    - id: 5132.01.801
      type: room
      name: 5132.01.801 (Technik RLT)
      subtext: "garching, COS"
      subtext_bold: 01.801@5132
    - id: 5101.01.801
      type: room
      name: 5101.01.801 (Installationsschacht)
      subtext: "garching, Physik I"
      subtext_bold: ""
    - id: 5132.U1.801
      type: room
      name: 5132.U1.801 (Technik)
      subtext: "garching, COS"
      subtext_bold: "-1.801@5132"
    - id: 3505.01.102
      type: room
      name: 3505.01.102 (Treppe)
      subtext: "campus-straubing-cs-biotechnologie-und-nachhaltigkeit, Hörsaal und Forschungsgebäude (Uferstraße 53)"
      subtext_bold: 01.801@3505
  n_visible: 10
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
