server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-2.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'wzw' should get 'wzw' in 1 results"
---
- facet: sites
  entries:
    - kind: location
      id: wzw
      type: campus
      name: Campus Weihenstephan (Freising)
      subtext: Campus
    - kind: location
      id: wzw-extern
      type: area
      name: School of of Life Sciences Außenstellen
      subtext: Gebiet / Gruppe von Gebäuden
    - kind: location
      id: wzw-berg
      type: area
      name: Gebiet 4100 Berg
      subtext: Gebiet / Gruppe von Gebäuden
    - kind: location
      id: wzw-mitte
      type: area
      name: Gebiet 4200 Mitte
      subtext: Gebiet / Gruppe von Gebäuden
    - kind: location
      id: wzw-nord
      type: area
      name: Gebiet 4300 Nord / Hochfeld
      subtext: Gebiet / Gruppe von Gebäuden
  n_visible: 5
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries:
    - kind: location
      id: "4277"
      type: building
      name: Forstwissenschaften
      subtext: Gebäude
    - kind: location
      id: "4224"
      type: building
      name: ZIEL IV - Biowissenschaften
      subtext: Gebäude
    - kind: location
      id: "4101"
      type: building
      name: Verwaltung / BLQ Brau- und Lebensmittelqualität
      subtext: Gebäude
    - kind: location
      id: "4213"
      type: building
      name: Lebensmitteltechnikum
      subtext: Gebäude
    - kind: location
      id: "4217"
      type: building
      name: Pflanzenproduktion 1
      subtext: Gebäude
  n_visible: 5
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
